Adjust moitoring docs to ilmo2

--- a/docs/admin/example.telegraf.conf
+++ b/docs/admin/example.telegraf.conf
@@ -21,7 +21,7 @@
   password = 'yourpassword'
 
 [[inputs.http]]
-  urls = ["https://example.com/metrics_json/"]
+  urls = ["https://example.com/library/metrics/"]
   name_override = "ilmo"
   #Data from HTTP in JSON format
   data_format = "json"
