Adjust for Django version 4

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-django
+Django
 python-decouple
 mysqlclient
 coverage
@@ -6,5 +6,6 @@ codecov
 sphinx
 sphinx-rtd-theme
 gunicorn
-psycopg2
 djangorestframework
+model_bakery
+fontawesomefree
