Use whitenoise for static files
Static files are served form https://whitenoise.readthedocs.io/en/latest/django.html and necessary
adjustments are made. This is based on
https://testdriven.io/blog/django-docker-traefik/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "django-modeltranslation",
     "django-registration",
     "django-polymorphic",
-    "psycopg2-binary"
+    "psycopg2-binary",
+    "whitenoise"
 ]
 dynamic = ["version", "readme"]
 
